fixed spacing issue in mobile view

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -59,7 +59,7 @@ input {
   height: 50px;
   border: none;
   border-bottom: 1px solid black;
-  margin: 10px 0px;
+  margin: 10px 1px;
   font-size: 14px;
   padding-left: 10px;
 }
